// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have no tooltip when disabled 1`] = `
<WithStyles(ForwardRef(IconButton))
  color="inherit"
  disabled={true}
/>
`;

exports[`should render correctly 1`] = `
<WithStyles(ForwardRef(Tooltip))
  title="Test"
>
  <WithStyles(ForwardRef(IconButton))
    color="inherit"
  />
</WithStyles(ForwardRef(Tooltip))>
`;
